--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;600;700&display=swap" rel="stylesheet">
-    <link href="/styles.css" rel="stylesheet">
+    <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -26,5 +26,5 @@
         </ul>
     </div>
 </body>
-<script src="/index.js"></script>
+<script src="./index.js"></script>
 </html>
